On ré-implemente l'éditeur de service internet.

--- a/plugins/services/servicesplugin.qrc
+++ b/plugins/services/servicesplugin.qrc
@@ -1,6 +1,7 @@
 <RCC>
 	<qresource prefix="/services/" >
         <file>images/webservices.png</file>
+        <file>images/typefws.png</file>
 		<file>translations/servicesplugin_fr.qm</file>
     </qresource>
 </RCC>
