--- a/xinx/ui/replace.ui
+++ b/xinx/ui/replace.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>518</width>
-    <height>262</height>
+    <width>542</width>
+    <height>292</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -16,42 +16,21 @@
    <property name="spacing" >
     <number>6</number>
    </property>
-   <property name="leftMargin" >
-    <number>9</number>
-   </property>
-   <property name="topMargin" >
-    <number>9</number>
-   </property>
-   <property name="rightMargin" >
-    <number>9</number>
-   </property>
-   <property name="bottomMargin" >
+   <property name="margin" >
     <number>9</number>
    </property>
    <item>
     <layout class="QGridLayout" >
-     <property name="leftMargin" >
+     <property name="margin" >
       <number>0</number>
      </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
-      <number>0</number>
-     </property>
-     <property name="horizontalSpacing" >
-      <number>6</number>
-     </property>
-     <property name="verticalSpacing" >
+     <property name="spacing" >
       <number>6</number>
      </property>
      <item row="1" column="0" >
       <widget class="QCheckBox" name="m_replaceCheckBox" >
        <property name="whatsThis" >
-        <string>&t;p>If checked, &lt;b>XINX&lt;/b> replace the searched string by this  sting.&lt;/p>
+        <string>p>If checked, &lt;b>XINX&lt;/b> replace the searched string by this  sting.&lt;/p>
 &lt;p>If the search string is a &lt;i>regular expression&lt;/i>, you can use \1 or \2 for captured string. Captured string in the find string is in bracket.&lt;/p></string>
        </property>
        <property name="text" >
@@ -105,26 +84,40 @@
        </property>
       </widget>
      </item>
+     <item row="2" column="0" >
+      <widget class="QLabel" name="label_2" >
+       <property name="enabled" >
+        <bool>false</bool>
+       </property>
+       <property name="text" >
+        <string>&amp;Where</string>
+       </property>
+       <property name="buddy" >
+        <cstring>directoryWidget</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1" >
+      <widget class="DirectoryEditWidget" native="1" name="directoryWidget" >
+       <property name="enabled" >
+        <bool>false</bool>
+       </property>
+       <property name="focusPolicy" >
+        <enum>Qt::TabFocus</enum>
+       </property>
+       <property name="directory" stdset="0" >
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
     <layout class="QGridLayout" >
-     <property name="leftMargin" >
+     <property name="margin" >
       <number>0</number>
      </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
-      <number>0</number>
-     </property>
-     <property name="horizontalSpacing" >
-      <number>6</number>
-     </property>
-     <property name="verticalSpacing" >
+     <property name="spacing" >
       <number>6</number>
      </property>
      <item row="1" column="1" >
@@ -132,7 +125,7 @@
        <property name="orientation" >
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>20</width>
          <height>40</height>
@@ -152,16 +145,7 @@
         <property name="spacing" >
          <number>6</number>
         </property>
-        <property name="leftMargin" >
-         <number>9</number>
-        </property>
-        <property name="topMargin" >
-         <number>9</number>
-        </property>
-        <property name="rightMargin" >
-         <number>9</number>
-        </property>
-        <property name="bottomMargin" >
+        <property name="margin" >
          <number>9</number>
         </property>
         <item>
@@ -189,7 +173,7 @@
        <property name="orientation" >
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>20</width>
          <height>40</height>
@@ -209,22 +193,13 @@
         <property name="spacing" >
          <number>6</number>
         </property>
-        <property name="leftMargin" >
-         <number>9</number>
-        </property>
-        <property name="topMargin" >
-         <number>9</number>
-        </property>
-        <property name="rightMargin" >
-         <number>9</number>
-        </property>
-        <property name="bottomMargin" >
+        <property name="margin" >
          <number>9</number>
         </property>
         <item>
          <widget class="QRadioButton" name="m_searchAllRadioButton" >
           <property name="text" >
-           <string>All</string>
+           <string>Current document</string>
           </property>
           <property name="checked" >
            <bool>true</bool>
@@ -235,6 +210,20 @@
          <widget class="QRadioButton" name="m_searchSelectionRadioButton" >
           <property name="text" >
            <string>Selection</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioButton" >
+          <property name="text" >
+           <string>Project files</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="radioButton_2" >
+          <property name="text" >
+           <string>Custom files</string>
           </property>
          </widget>
         </item>
@@ -250,16 +239,7 @@
         <property name="spacing" >
          <number>6</number>
         </property>
-        <property name="leftMargin" >
-         <number>9</number>
-        </property>
-        <property name="topMargin" >
-         <number>9</number>
-        </property>
-        <property name="rightMargin" >
-         <number>9</number>
-        </property>
-        <property name="bottomMargin" >
+        <property name="margin" >
          <number>9</number>
         </property>
         <item>
@@ -312,16 +292,7 @@
      <property name="spacing" >
       <number>6</number>
      </property>
-     <property name="leftMargin" >
-      <number>0</number>
-     </property>
-     <property name="topMargin" >
-      <number>0</number>
-     </property>
-     <property name="rightMargin" >
-      <number>0</number>
-     </property>
-     <property name="bottomMargin" >
+     <property name="margin" >
       <number>0</number>
      </property>
      <item>
@@ -329,7 +300,7 @@
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>131</width>
          <height>31</height>
@@ -343,7 +314,8 @@
         <string>&amp;Find</string>
        </property>
        <property name="icon" >
-        <iconset resource="../application.qrc" >:/images/find.png</iconset>
+        <iconset resource="../application.qrc" >
+         <normaloff>:/images/find.png</normaloff>:/images/find.png</iconset>
        </property>
       </widget>
      </item>
@@ -353,7 +325,8 @@
         <string>&amp;Close</string>
        </property>
        <property name="icon" >
-        <iconset resource="../application.qrc" >:/images/button_cancel.png</iconset>
+        <iconset resource="../application.qrc" >
+         <normaloff>:/images/button_cancel.png</normaloff>:/images/button_cancel.png</iconset>
        </property>
       </widget>
      </item>
@@ -361,10 +334,18 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>DirectoryEditWidget</class>
+   <extends>QWidget</extends>
+   <header location="global" >directoryedit.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>m_comboFind</tabstop>
-  <tabstop>m_replaceCheckBox</tabstop>
   <tabstop>m_comboReplace</tabstop>
+  <tabstop>m_replaceCheckBox</tabstop>
   <tabstop>m_caseCheckBox</tabstop>
   <tabstop>m_fromStartCheckBox</tabstop>
   <tabstop>m_wholeWordsCheckBox</tabstop>
@@ -373,6 +354,9 @@
   <tabstop>m_DownRadioButton</tabstop>
   <tabstop>m_searchAllRadioButton</tabstop>
   <tabstop>m_searchSelectionRadioButton</tabstop>
+  <tabstop>radioButton</tabstop>
+  <tabstop>radioButton_2</tabstop>
+  <tabstop>directoryWidget</tabstop>
   <tabstop>m_findButton</tabstop>
   <tabstop>m_closeButton</tabstop>
  </tabstops>
@@ -387,8 +371,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>444</x>
-     <y>287</y>
+     <x>448</x>
+     <y>280</y>
     </hint>
     <hint type="destinationlabel" >
      <x>96</x>
@@ -403,8 +387,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>525</x>
-     <y>287</y>
+     <x>531</x>
+     <y>280</y>
     </hint>
     <hint type="destinationlabel" >
      <x>179</x>
@@ -435,12 +419,12 @@
    <slot>setChecked(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>114</x>
-     <y>154</y>
+     <x>135</x>
+     <y>171</y>
     </hint>
     <hint type="destinationlabel" >
      <x>291</x>
-     <y>136</y>
+     <y>196</y>
     </hint>
    </hints>
   </connection>
@@ -451,12 +435,12 @@
    <slot>setChecked(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>150</x>
-     <y>152</y>
+     <x>171</x>
+     <y>171</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>406</x>
-     <y>102</y>
+     <x>418</x>
+     <y>126</y>
     </hint>
    </hints>
   </connection>
@@ -467,12 +451,12 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>193</x>
-     <y>147</y>
+     <x>189</x>
+     <y>171</y>
     </hint>
     <hint type="destinationlabel" >
      <x>291</x>
-     <y>107</y>
+     <y>149</y>
     </hint>
    </hints>
   </connection>
@@ -483,12 +467,12 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>197</x>
-     <y>157</y>
+     <x>189</x>
+     <y>171</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>421</x>
-     <y>143</y>
+     <x>433</x>
+     <y>167</y>
     </hint>
    </hints>
   </connection>
@@ -499,12 +483,76 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>75</x>
-     <y>151</y>
+     <x>96</x>
+     <y>171</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>74</x>
-     <y>210</y>
+     <x>95</x>
+     <y>229</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_regularExpressionCheckBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_wholeWordsCheckBox</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>63</x>
+     <y>218</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>64</x>
+     <y>194</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_regularExpressionCheckBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_caseCheckBox</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>40</x>
+     <y>212</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>48</x>
+     <y>129</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>radioButton_2</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>directoryWidget</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>417</x>
+     <y>217</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>400</x>
+     <y>76</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>radioButton_2</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>label_2</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>432</x>
+     <y>215</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>62</x>
+     <y>72</y>
     </hint>
    </hints>
   </connection>
