--- a/xinx/ui/replace.ui
+++ b/xinx/ui/replace.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>542</width>
-    <height>292</height>
+    <height>330</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -93,12 +93,12 @@
         <string>&amp;Where</string>
        </property>
        <property name="buddy" >
-        <cstring>directoryWidget</cstring>
+        <cstring>m_directoryWidget</cstring>
        </property>
       </widget>
      </item>
      <item row="2" column="1" >
-      <widget class="DirectoryEditWidget" native="1" name="directoryWidget" >
+      <widget class="DirectoryEditWidget" native="1" name="m_directoryWidget" >
        <property name="enabled" >
         <bool>false</bool>
        </property>
@@ -214,14 +214,14 @@
          </widget>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioButton" >
+         <widget class="QRadioButton" name="m_projectFilesRadioButton" >
           <property name="text" >
            <string>Project files</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QRadioButton" name="radioButton_2" >
+         <widget class="QRadioButton" name="m_customFilesRadioButton" >
           <property name="text" >
            <string>Custom files</string>
           </property>
@@ -344,8 +344,9 @@
  </customwidgets>
  <tabstops>
   <tabstop>m_comboFind</tabstop>
-  <tabstop>m_comboReplace</tabstop>
   <tabstop>m_replaceCheckBox</tabstop>
+  <tabstop>m_comboReplace</tabstop>
+  <tabstop>m_directoryWidget</tabstop>
   <tabstop>m_caseCheckBox</tabstop>
   <tabstop>m_fromStartCheckBox</tabstop>
   <tabstop>m_wholeWordsCheckBox</tabstop>
@@ -354,9 +355,8 @@
   <tabstop>m_DownRadioButton</tabstop>
   <tabstop>m_searchAllRadioButton</tabstop>
   <tabstop>m_searchSelectionRadioButton</tabstop>
-  <tabstop>radioButton</tabstop>
-  <tabstop>radioButton_2</tabstop>
-  <tabstop>directoryWidget</tabstop>
+  <tabstop>m_projectFilesRadioButton</tabstop>
+  <tabstop>m_customFilesRadioButton</tabstop>
   <tabstop>m_findButton</tabstop>
   <tabstop>m_closeButton</tabstop>
  </tabstops>
@@ -371,8 +371,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>448</x>
-     <y>280</y>
+     <x>427</x>
+     <y>317</y>
     </hint>
     <hint type="destinationlabel" >
      <x>96</x>
@@ -388,7 +388,7 @@
    <hints>
     <hint type="sourcelabel" >
      <x>531</x>
-     <y>280</y>
+     <y>317</y>
     </hint>
     <hint type="destinationlabel" >
      <x>179</x>
@@ -419,12 +419,12 @@
    <slot>setChecked(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>135</x>
-     <y>171</y>
+     <x>159</x>
+     <y>198</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>291</x>
-     <y>196</y>
+     <x>340</x>
+     <y>238</y>
     </hint>
    </hints>
   </connection>
@@ -435,12 +435,12 @@
    <slot>setChecked(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>171</x>
-     <y>171</y>
+     <x>195</x>
+     <y>198</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>418</x>
-     <y>126</y>
+     <x>517</x>
+     <y>167</y>
     </hint>
    </hints>
   </connection>
@@ -451,12 +451,12 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>189</x>
-     <y>171</y>
+     <x>195</x>
+     <y>198</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>291</x>
-     <y>149</y>
+     <x>340</x>
+     <y>187</y>
     </hint>
    </hints>
   </connection>
@@ -467,28 +467,12 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>189</x>
-     <y>171</y>
+     <x>195</x>
+     <y>198</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>433</x>
-     <y>167</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>m_fromStartCheckBox</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>m_regularExpressionCheckBox</receiver>
-   <slot>setDisabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel" >
-     <x>96</x>
-     <y>171</y>
-    </hint>
-    <hint type="destinationlabel" >
-     <x>95</x>
-     <y>229</y>
+     <x>517</x>
+     <y>198</y>
     </hint>
    </hints>
   </connection>
@@ -499,12 +483,12 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>63</x>
-     <y>218</y>
+     <x>87</x>
+     <y>260</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>64</x>
-     <y>194</y>
+     <x>88</x>
+     <y>229</y>
     </hint>
    </hints>
   </connection>
@@ -515,44 +499,156 @@
    <slot>setDisabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>40</x>
-     <y>212</y>
+     <x>64</x>
+     <y>260</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>48</x>
-     <y>129</y>
+     <x>72</x>
+     <y>167</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>radioButton_2</sender>
+   <sender>m_customFilesRadioButton</sender>
    <signal>toggled(bool)</signal>
-   <receiver>directoryWidget</receiver>
+   <receiver>m_directoryWidget</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>417</x>
-     <y>217</y>
+     <x>517</x>
+     <y>260</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>400</x>
-     <y>76</y>
+     <x>531</x>
+     <y>95</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>radioButton_2</sender>
+   <sender>m_customFilesRadioButton</sender>
    <signal>toggled(bool)</signal>
    <receiver>label_2</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel" >
-     <x>432</x>
-     <y>215</y>
+     <x>517</x>
+     <y>260</y>
     </hint>
     <hint type="destinationlabel" >
-     <x>62</x>
-     <y>72</y>
+     <x>72</x>
+     <y>95</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_projectFilesRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_directionGroupBox</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>446</x>
+     <y>217</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>301</x>
+     <y>140</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_projectFilesRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_fromStartCheckBox</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>482</x>
+     <y>213</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>91</x>
+     <y>182</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_customFilesRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_directionGroupBox</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>392</x>
+     <y>243</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>239</x>
+     <y>130</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_customFilesRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_fromStartCheckBox</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>423</x>
+     <y>245</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>109</x>
+     <y>187</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_projectFilesRadioButton</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>label_2</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>408</x>
+     <y>222</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>84</x>
+     <y>87</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_fromStartCheckBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_projectFilesRadioButton</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>178</x>
+     <y>189</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>441</x>
+     <y>217</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>m_fromStartCheckBox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>m_customFilesRadioButton</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>56</x>
+     <y>183</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>506</x>
+     <y>246</y>
     </hint>
    </hints>
   </connection>
